[gd_scene load_steps=5 format=3 uid="uid://bbaxu7w4qd1w0"]

[ext_resource type="Script" path="res://src/sounds/SoundPlayer.gd" id="1_0r6mu"]
[ext_resource type="AudioStream" uid="uid://b83njfpj4pxho" path="res://src/sounds/ding-36029.mp3" id="2_qhbk5"]
[ext_resource type="AudioStream" uid="uid://c0l6akkrskbup" path="res://src/sounds/squeaky-door-open-113212.mp3" id="2_rxm44"]
[ext_resource type="AudioStream" uid="uid://cixp2i8n3u87d" path="res://src/sounds/metal-stairs-foot-steps-29688.mp3" id="4_vw5rf"]

[node name="SoundPlayer" type="Node"]
script = ExtResource("1_0r6mu")

[node name="AudioStreamDoor" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_rxm44")
volume_db = -6.0

[node name="AudioStreamDing" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_qhbk5")
volume_db = -6.0

[node name="AudioStreamStairs" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_vw5rf")
volume_db = -6.0
